 - Debugger: Add CLI "frame", frame advance command
 - Settings window
 - Bilinear resampling option
 - Add option to skip BIOS start screen
 - List of recently opened games
 - Support for games using the Solar Sensor
 - Debugger: Add CLI functions for writing to memory
 - Better audio resampling via blip-buf
Bugfixes:
 - Qt: Fix issue with set frame sizes being the wrong height
 - Qt: Fix emulator crashing when full screen if a game is not running
 - GBA Thread: Allow halted games to exit cleanly
 - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
 - ARM7: Fix LDM writeback to a register already written
 - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
 - ARM7: Extend prefetch by one stage
 - GBA BIOS: Fix BIOS prefetch after returning from a SWI
 - Debugger: Negative PC-relative loads now properly subtract the offset
 - Qt: Fix window focus issues
 - GBA Audio: Support 16-bit writes to FIFO audio
 - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
 - Qt: Properly set default video recording settings
 - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
 - GBA Video: Fix blend issues with obscured middle layers
 - Video: Ensure FFmpeg encoder has audio frames
 - Video: Fix uncompressed PCM audio recording
 - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
 - Debugger: Align PC-relative loads in Thumb
 - Debugger: Fix watchpoints triggering too late
Misc:
 - Qt: Disable sync to video by default
 - GBA: Exit cleanly on FATAL if the port supports it
 - Qt: Handle a game crash without crashing
 - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
 - Qt: Set default log level to FATAL, ERROR and WARN
 - Qt: Clarify some phrasing in the menus
 - GBA Memory: Implement 16- and 32-bit loads from SRAM

0.1.0: (2014-12-13)
 - Initial release